<resources>
    <string name="app_name">Bantumi</string>

    <string name="txtPlayer1">BBBBBBBBbAAAA</string>
    <string name="txtPlayer2">Jugador 2</string>
    <string name="txtBtnReset">Reset</string>

    <!-- Valores del juego -->
    <integer name="intNumInicialSemillas">4</integer>
    <string name="txtInitialScore">0</string>

    <!-- Mensaje opción sin implementar -->
    <string name="txtSinImplementar">¡No implementado aún!</string>

    <!-- Opciones -->
    <string name="txtReiniciarPartida">Reiniciar</string>
    <string name="txtOpcionGuardar">Guardar Partida</string>
    <string name="txtOpcionRecuperar">Recuperar Partida</string>
    <string name="txtOpcionMejoresResultados">Mejores Resultados</string>

    <!-- Acerca de -->
    <string name="aboutText">Acerca de</string>
    <string name="aboutTitle">¿Cómo se juega?</string>
    <string name="aboutMessage"><p>Cada jugador elige una de sus 6 casillas -que no puede estar vacía-, recoge
        todas las semillas que contenga y las “siembra” una a una en sentido contrario a las agujas del reloj
        en las siguientes casillas del tablero (excepto en el almacén del oponente). Se aplican las siguientes reglas:</p>
        <ul>
            <li>Si la siembra termina en el almacén propio, el jugador vuelve a tener el turno</li>
            <li>Si la siembra termina en una casilla propia que estuviera vacía, se lleva al almacén
                propio la última semilla y las que hubiera en la casilla opuesta del otro jugador</li>
            <li>El juego termina en el momento en que cualquiera de los dos jugadores tenga todas sus
                casillas vacías. Si el contrario dispone de semillas, éstas pasarán al almacén del propietario
                de las casillas</li>
        </ul>
        <p>Gana el jugador que consiga en su almacén el mayor número de semillas</p>
    </string>

    <!-- Preferencias -->
    <string name="preferencesText">Ajustes</string>
    <string name="prefTituloCategoria1">Datos personales</string>
    <string name="prefTituloNombreJugador">Nombre del jugador</string>
    <string name="prefTextoNombreJugador">Pulse para teclear el nombre del jugador</string>
    <string name="prefTituloCategoria2">Ajustes del juego</string>
    <string name="prefTituloCategoria3">Más información…</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Desea jugar otra partida?</string>

    <!-- Diálogo Reiniciar -->
    <string name="txtDialogoReiniciarTitulo">Reiniciar</string>
    <string name="txtDialogoReiniciarPregunta">¿Estás seguro?</string>

    <!-- Diálogo Guardar Partida -->
    <string name="txtDialogoGuardarTitulo">Guardar partida</string>
    <string name="txtDialogoGuardarPregunta">¿Estás seguro?</string>

    <!-- Diálogo Borrar bbdd -->
    <string name="txtDialogoBorrarTitulo">Borrar puntuaciones</string>
    <string name="txtDialogoBorrarPregunta">¿Estás seguro?</string>

    <!-- Layout Scores -->
    <string name="cdBotonBorrar">Borrar registros</string>
    <string name="txtPuntuaciones">Puntuaciones</string>

    <!-- Layout Preferences -->prefTituloJugadores
    <string name="prefTituloJugadores">Apariencia jugadores</string>
        <string name="txtNombreJugador1">Nombre del primer jugador</string>
        <string name="txtNombreJugador2">Nombre del primer jugador</string>
    <string name="prefTituloJuego">Parámetros del juego</string>
        <string name="txtNumeroSemillasIniciales">Número de semillas iniciales</string>

</resources>